--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -125,17 +125,19 @@ footer{
     display: flex;
     justify-content: center;
     align-items:center ;
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
+    
 }
 
 .icono-suerytex img{
     margin-top: auto;
     height: 210px;
     width: 350px;
+    margin-right: 30px;
 }
 
-@media screen and (min-width: 320px) and (max-width:600px){
+@media screen and (min-width: 220px) and (max-width:600px){
     .icono-suerytex img{
         margin-top: auto;
         height: 100px;
@@ -154,8 +156,8 @@ footer{
         justify-content: center;
         justify-items: center;
         align-items:center ;
-        height: 300px;
-        width: 300px;
+        height: 100%;
+        width: 100%;
         margin: auto
     }
 
@@ -191,14 +193,15 @@ footer{
     background-position: center center;
 }
 
-@media screen and (min-width: 320px) and (max-width:600px){
+@media screen and (min-width: 220px) and (max-width:660px){
     #inicio{
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         flex-direction: column;
-        height: 92vh;
+        height: 94vh;
+        width: 100%;
         background-image: linear-gradient(
             0deg,
             rgba(0,0,0,0.5),
@@ -274,7 +277,7 @@ footer{
     height: 200px;
 }
 
-@media screen and (min-width: 300px) and (max-width: 500px){
+@media screen and (min-width: 220px) and (max-width: 500px){
     body{
         height: 100%;
         width: 100%;
@@ -295,7 +298,7 @@ footer{
     .cartas{
         display: grid;
         grid-template-columns: 1fr  ;
-        grid-template-rows: 450px ;
+        grid-template-rows: 470px 470px 470px 470px 470px 470px 470px 470px ;
         
     }
 
@@ -307,4 +310,39 @@ footer{
     }
     
 
+}
+
+@media screen and (min-width:760px) and (max-width:1000px){
+    body{
+        height: 100%;
+        width: 100%;
+    }
+
+    #productos{
+        width: 100%;
+        height: 100%;
+        padding-top: 120px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-items: center;
+        background-color: rgb(245,245,245);
+    }
+
+    .cartas{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 470px 470px 470px 470px ;
+        
+    }
+
+    .card{
+        margin-bottom: 30px;
+        width: 220px;
+    }
+
+    .card-body{
+        height: 230px;
+    }
 }
