--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -9,7 +9,7 @@ body {
   margin: 0; }
 
 h1 {
-  font-size: 6.5em; }
+  font-size: 7.5em; }
 
 h2 {
   font-size: 6.1em; }
@@ -67,7 +67,7 @@ header {
   font-size: 25px;
   transition: transform 0.3s; }
   .nav-item:hover {
-    transform: scale(1.2); }
+    transform: scale(1.3); }
 
 .dropdown-item {
   font-size: 20px; }
@@ -112,7 +112,18 @@ footer {
     .icono-suerytex img:hover {
       transform: scale(1.35); }
 
+.box input {
+  border: 2px solid #1466ff;
+  color: white;
+  border-radius: 3px;
+  background-color: #24303c; }
+
 @media screen and (min-width: 220px) and (max-width: 600px) {
+  .nav-item {
+    font-size: 25px;
+    transition: transform 0.3s; }
+    .nav-item:hover {
+      transform: scale(1.1); }
   .icono-suerytex {
     display: flex;
     justify-content: center;
@@ -140,6 +151,11 @@ footer {
     width: 100%; } }
 
 @media screen and (min-width: 510px) and (max-width: 760px) {
+  .nav-item {
+    font-size: 25px;
+    transition: transform 0.3s; }
+    .nav-item:hover {
+      transform: scale(1.2); }
   footer {
     height: auto; }
   .icono-suerytex {
@@ -239,6 +255,8 @@ footer {
   align-items: center;
   padding-top: 20px;
   padding-bottom: 20px; }
+  #sobre-nosotros h2 {
+    font-size: 2.5em; }
 
 .foto-contenedor {
   height: 80%;
@@ -256,7 +274,14 @@ footer {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://1.bp.blogspot.com/-cT8WkrpiooY/XzILTB46hwI/AAAAAAADJyA/8i9FoE6sy48AyOaYshUEL6Huyjtzw5RyACLcBGAsYHQ/d/rollos-de-textiles.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center; } }
+    background-position: center center; }
+  #sobre-nosotros {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px; } }
 
 main {
   height: auto;
@@ -264,8 +289,8 @@ main {
 
 #productos {
   width: 100%;
-  height: 1200px;
-  padding-top: 85px;
+  height: 1400px;
+  padding-top: 100px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -277,7 +302,7 @@ main {
 .cartas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: 600px 600px;
   margin: auto; }
 
 .card {
@@ -353,7 +378,7 @@ main {
 .cartas-nuevas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 600px;
   margin: auto; }
 
 #ofertas-productos {
@@ -370,15 +395,11 @@ main {
 .cartas-en-ofertas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 600px;
   margin: auto; }
 
 @media screen and (min-width: 220px) and (max-width: 500px) {
   body {
-    height: 100%;
-    width: 100%;
-    height: 100%;
-    width: 100%;
     height: 100%;
     width: 100%; }
   #productos {
@@ -394,14 +415,11 @@ main {
   .cartas {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(8, auto); }
+    grid-template-rows: repeat(8, 600px); }
   .card {
-    width: 220px;
+    width: 250px;
     height: auto;
-    margin-bottom: 30px;
-    width: 220px;
-    margin-bottom: 30px;
-    width: 220px; }
+    margin-bottom: 30px; }
   .card-body {
     height: 230px;
     font-size: 13px; }
@@ -418,7 +436,7 @@ main {
   .cartas-nuevas {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto; }
+    grid-template-rows: repeat(4, 600px); }
   #ofertas-productos {
     width: 100%;
     height: 100%;
@@ -432,12 +450,10 @@ main {
   .cartas-en-ofertas {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto; } }
+    grid-template-rows: repeat(4, 600px); } }
 
 @media screen and (min-width: 500px) and (max-width: 1200px) {
   body {
-    height: 100%;
-    width: 100%;
     height: 100%;
     width: 100%; }
   #nuevos-productos {
@@ -453,12 +469,10 @@ main {
   .cartas-nuevas {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto; }
+    grid-template-rows: 670px 670px; }
   .card {
     margin-bottom: 30px;
-    width: 220px;
-    margin-bottom: 30px;
-    width: 220px; }
+    width: 280px; }
   #ofertas-productos {
     width: 100%;
     height: 100%;
@@ -472,12 +486,20 @@ main {
   .cartas-en-ofertas {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto; } }
+    grid-template-rows: 650px 650px; } }
 
 #form-comentarios {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-color: #24303c;
+  margin-bottom: 15px; }
+
+.coments {
+  z-index: 9999;
+  color: white;
+  text-align: center;
+  font-size: 3em; }
 
 #comentario-area {
   background-color: #24303c;
@@ -487,7 +509,7 @@ main {
 .form {
   height: auto;
   width: 100%;
-  padding: 160px;
+  padding: 120px;
   border-radius: 10px;
   background-color: #24303c;
   display: flex;
@@ -517,15 +539,52 @@ main {
   color: #1466ff;
   border: 2px solid white; }
 
+@media screen and (min-width: 220px) and (max-width: 600px) {
+  #form-comentarios {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 385px;
+    height: 1150px; }
+  .form {
+    padding: 200px 0;
+    border-radius: 10px;
+    background-color: #24303c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 130px; }
+    .form label {
+      font-weight: bold; }
+    .form input {
+      width: 95%;
+      height: 50px;
+      padding: 3px 10px;
+      font-size: 2rem;
+      border: 2px solid #1466ff;
+      color: white;
+      border-radius: 3px;
+      background-color: #24303c;
+      margin: 8px 0;
+      display: inline-block;
+      transition: transform 0.3s; }
+      .form input:focus {
+        transform: scale(1.02); } }
+
 .btn--normal {
   background-color: #0272fa;
   color: white;
   padding: 10px 20px;
   border-radius: 4px;
   text-decoration: none;
-  margin-top: auto; }
+  margin-top: auto;
+  border: none;
+  transition: transform 0.2s; }
   .btn--normal:hover {
-    color: white; }
+    color: white;
+    transform: scale(1.1); }
 
 .btn--ofertas {
   background-color: #fa0240;
@@ -533,9 +592,12 @@ main {
   padding: 10px 20px;
   border-radius: 4px;
   text-decoration: none;
-  margin-top: auto; }
+  margin-top: auto;
+  border: none;
+  transition: transform 0.2s; }
   .btn--ofertas:hover {
-    color: white; }
+    color: white;
+    transform: scale(1.1); }
 
 .btn--nuevo {
   background-color: #23ca39;
@@ -543,6 +605,9 @@ main {
   padding: 10px 20px;
   border-radius: 4px;
   text-decoration: none;
-  margin-top: auto; }
+  margin-top: auto;
+  border: none;
+  transition: transform 0.2s; }
   .btn--nuevo:hover {
-    color: white; }
+    color: white;
+    transform: scale(1.1); }
