--- a/assets/styles/sass/styles.scss
+++ b/assets/styles/sass/styles.scss
@@ -11,7 +11,7 @@ body {
 	margin: 0;
 }
 h1 {
-	font-size: 6.5em;
+	font-size: 7.5em;
 }
 h2 {
 	font-size: 6.1em;
@@ -82,7 +82,7 @@ header {
 	font-size: 25px;
 	transition: transform 0.3s;
 	&:hover {
-		transform: scale(1.20);
+		transform: scale(1.3);
 	}
 }
 
@@ -145,7 +145,26 @@ footer {
 	}
 }
 
+.box{
+	input{
+		border: 2px solid $color_2;
+		color: white;
+		border-radius:  3px;
+		background-color: #24303c;
+	}
+}
+
 @media screen and (min-width: 220px) and (max-width:600px) {
+	.nav-item {
+		font-size: 25px;
+		transition: transform 0.3s;
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
+
+
+
 	.icono-suerytex {
 		img {
 			margin-top: auto;
@@ -181,6 +200,17 @@ footer {
 }
 
 @media screen and (min-width: 510px) and (max-width:760px) {
+	.nav-item {
+		font-size: 25px;
+		transition: transform 0.3s;
+		&:hover {
+			transform: scale(1.2);
+		}
+	}
+
+
+
+
 	footer {
 		height: auto;
 		
@@ -300,6 +330,9 @@ footer {
 	align-items: center;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	h2{
+		font-size: 2.5em;
+	}
 }
 
 .foto-contenedor{
@@ -321,6 +354,15 @@ footer {
 		background-size: cover;
 		background-position: center center;
 	}
+
+	#sobre-nosotros{
+		display: grid;
+		grid-template-columns: 1fr ;
+		text-align: center;
+		align-items: center;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
 }
 
 main {
@@ -334,8 +376,9 @@ main {
 
 #productos {
 	width: 100%;
-	height: 1200px;
-	padding-top: 85px;
+	height: 1400px;
+	padding-top: 100px;
+	
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -348,7 +391,7 @@ main {
 .cartas {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: auto auto;
+	grid-template-rows: 600px 600px;
 	margin: auto;
 }
 
@@ -444,7 +487,7 @@ main {
 .cartas-nuevas {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: auto;
+	grid-template-rows: 600px;
 	margin: auto;
 }
 
@@ -466,7 +509,7 @@ main {
 .cartas-en-ofertas {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: auto;
+	grid-template-rows: 600px;
 	margin: auto;
 }
 
@@ -475,10 +518,7 @@ main {
 	body {
 		height: 100%;
 		width: 100%;
-		height: 100%;
-		width: 100%;
-		height: 100%;
-		width: 100%;
+
 	}
 	#productos {
 		width: 100%;
@@ -494,16 +534,14 @@ main {
 	.cartas {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: repeat(8,auto);
+		grid-template-rows: repeat(8,600px);
 	}
 	.card {
-		width: 220px;
+		width: 250px;
 		height: auto;
-		margin-bottom: 30px;
-		width: 220px;
-		margin-bottom: 30px;
-		width: 220px;
-	}
+		margin-bottom: 30px;}
+
+
 	.card-body {
 		height: 230px;
 		font-size: 13px;
@@ -522,7 +560,7 @@ main {
 	.cartas-nuevas {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: auto auto auto auto;
+		grid-template-rows: repeat(4,600px);
 	}
 	#ofertas-productos {
 		width: 100%;
@@ -538,7 +576,7 @@ main {
 	.cartas-en-ofertas {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: auto auto auto auto;
+		grid-template-rows: repeat(4,600px);
 	}
 }
 
@@ -546,8 +584,7 @@ main {
 	body {
 		height: 100%;
 		width: 100%;
-		height: 100%;
-		width: 100%;
+
 	}
 	#nuevos-productos {
 		width: 100%;
@@ -563,13 +600,12 @@ main {
 	.cartas-nuevas {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: auto auto;
+		grid-template-rows: 670px 670px;
 	}
 	.card {
 		margin-bottom: 30px;
-		width: 220px;
-		margin-bottom: 30px;
-		width: 220px;
+		width: 280px;
+
 	}
 	#ofertas-productos {
 		width: 100%;
@@ -585,7 +621,7 @@ main {
 	.cartas-en-ofertas {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: auto auto;
+		grid-template-rows: 650px 650px;
 	}
 }
 
@@ -594,13 +630,21 @@ main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	background-color: #24303c;
+	margin-bottom: 15px;
 }
 
 @mixin colores ($background-color, $color){
 	background-color: $background-color;
 	color:$color
 }
-
+.coments{
+	z-index: 9999;
+	color: white;
+	text-align: center;
+	font-size: 3em
+}
 #comentario-area{
 	@include colores(#24303c, $color_3);
 	border: 2px solid $color_2;
@@ -609,7 +653,7 @@ main {
 .form{
 	height: auto;
     width: 100%;
-    padding: 160px;
+    padding: 120px;
     border-radius: 10px;
     background-color: #24303c;
 	display: flex;
@@ -649,6 +693,53 @@ main {
 	}
 }
 
+@media screen and (min-width: 220px) and (max-width:600px){
+
+
+
+	#form-comentarios{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 385px;
+		height: 1150px;
+	}
+
+	.form{
+		padding: 200px 0;
+		border-radius: 10px;
+		background-color: #24303c;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		margin-bottom: 10px;
+		margin-top: 130px;
+		label{
+			font-weight: bold;
+		}
+	
+		input {
+			width: 95%;
+			height: 50px;
+			padding: 3px 10px;
+			font-size: 2rem;
+			border: 2px solid $color_2;
+			color: white;
+			border-radius:  3px;
+			background-color: #24303c;
+			margin: 8px 0;
+			display: inline-block;
+			transition: transform 0.3s;
+			&:focus{
+				transform: scale(1.02);
+			}
+		}
+	
+	
+	}
+}
+
 @each $key, $value in $botones {
 	.btn--#{$key}{
 		background-color: $value;
@@ -657,8 +748,11 @@ main {
 		border-radius: 4px;
 		text-decoration: none;
 		margin-top:auto;
+		border: none;
+		transition: transform 0.2s;
 		&:hover{
 			color: white;
+			transform: scale(1.1);
 		}
 	}
 }
