--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -150,12 +150,12 @@ footer {
     height: auto;
     width: 100%; } }
 
-@media screen and (min-width: 510px) and (max-width: 760px) {
+@media screen and (min-width: 510px) and (max-width: 780px) {
   .nav-item {
     font-size: 25px;
     transition: transform 0.3s; }
     .nav-item:hover {
-      transform: scale(1.2); }
+      transform: scale(1); }
   footer {
     height: auto; }
   .icono-suerytex {
@@ -333,14 +333,14 @@ main {
   .cartas {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, auto); }
+    grid-template-rows: repeat(4, 600px); }
   .card {
     margin-bottom: 30px;
     width: 220px; }
   .card-body {
     height: 230px; } }
 
-@media screen and (min-width: 500px) and (max-width: 760px) {
+@media screen and (min-width: 500px) and (max-width: 880px) {
   body {
     height: 100%;
     width: 100%; }
@@ -357,7 +357,7 @@ main {
   .cartas {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 470px 470px 470px; }
+    grid-template-rows: repeat(4, 670px); }
   .card {
     margin-bottom: 30px;
     width: 220px; }
