--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -302,8 +302,7 @@ main {
 .cartas {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 600px 600px;
-  margin: auto; }
+  grid-template-rows: 670px 670px; }
 
 .card {
   margin: 30px;
@@ -321,7 +320,7 @@ main {
     height: 100%;
     width: 100%; }
   #productos {
-    width: auto;
+    width: 100%;
     height: 100%;
     padding-top: 220px;
     display: flex;
@@ -333,14 +332,14 @@ main {
   .cartas {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, 600px); }
+    grid-template-rows: repeat(4, 670px); }
   .card {
     margin-bottom: 30px;
     width: 220px; }
   .card-body {
     height: 230px; } }
 
-@media screen and (min-width: 500px) and (max-width: 880px) {
+@media screen and (min-width: 500px) and (max-width: 895px) {
   body {
     height: 100%;
     width: 100%; }
@@ -360,7 +359,7 @@ main {
     grid-template-rows: repeat(4, 670px); }
   .card {
     margin-bottom: 30px;
-    width: 220px; }
+    width: 230px; }
   .card-body {
     height: 230px; } }
 
@@ -452,7 +451,7 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 600px); } }
 
-@media screen and (min-width: 500px) and (max-width: 1200px) {
+@media screen and (min-width: 500px) and (max-width: 1400px) {
   body {
     height: 100%;
     width: 100%; }
@@ -539,7 +538,7 @@ main {
   color: #1466ff;
   border: 2px solid white; }
 
-@media screen and (min-width: 220px) and (max-width: 600px) {
+@media screen and (min-width: 220px) and (max-width: 440px) {
   #form-comentarios {
     display: flex;
     justify-content: center;
