--- a/assets/styles/sass/styles.scss
+++ b/assets/styles/sass/styles.scss
@@ -391,8 +391,8 @@ main {
 .cartas {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 600px 600px;
-	margin: auto;
+	grid-template-rows: 670px 670px;
+	
 }
 
 .card {
@@ -415,7 +415,7 @@ main {
 		width: 100%;
 	}
 	#productos {
-		width: auto;
+		width: 100%;
 		height: 100%;
 		padding-top: 220px;
 		display: flex;
@@ -428,7 +428,7 @@ main {
 	.cartas {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: repeat(4,600px);
+		grid-template-rows: repeat(4,670px);
 	}
 	.card {
 		margin-bottom: 30px;
@@ -439,7 +439,7 @@ main {
 	}
 }
 
-@media screen and (min-width:500px) and (max-width:880px) {
+@media screen and (min-width:500px) and (max-width:895px) {
 	body {
 		height: 100%;
 		width: 100%;
@@ -462,7 +462,7 @@ main {
 	}
 	.card {
 		margin-bottom: 30px;
-		width: 220px;
+		width: 230px;
 	}
 	.card-body {
 		height: 230px;
@@ -580,7 +580,7 @@ main {
 	}
 }
 
-@media screen and (min-width:500px) and (max-width:1200px) {
+@media screen and (min-width:500px) and (max-width:1400px) {
 	body {
 		height: 100%;
 		width: 100%;
@@ -693,7 +693,7 @@ main {
 	}
 }
 
-@media screen and (min-width: 220px) and (max-width:600px){
+@media screen and (min-width: 220px) and (max-width:440px){
 
 
 
